[project]
name = "comfyui_davcha"
description = "Nodes:SmartMask, ResizeCropFit, Percent Padding, SoftErosion, StringScheduleHelper, DStack, DavchaConditioningConcat, DavchaModelMergeSimple, DavchaCLIPMergeSimple, DavchaModelMergeSD1, DavchaModelMergeSDXL, ConditioningCompress... Some personal QoL and experimental nodes"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/dchatel/comfyui_davcha"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_davcha"
Icon = ""
